[package]
name = "muFFT"
version = "0.1.0"
authors = ["Ramla <ijazramla@gmail.com>"]

[dependencies]
mish = "0.2.0"
cfg-if = "0.1"

[dependencies.num-complex]
version = "0.2.0"
default-features = false

[dependencies.log]
default-features = false
version = "0.3.7"

# [target.'cfg(target_feature = "sse2")'.dependencies.immintrin]
[dependencies.immintrin]
path = "../../libs/rust-immintrin"

[dependencies.acpi]
path = "../acpi"

[dependencies.aligned_vec]
path = "../aligned_vec"